--- a/activities/Pages/Index.razor
+++ b/activities/Pages/Index.razor
@@ -94,7 +94,7 @@
             <MudCard>
                 <MudCardHeader Class="pb-1">
                     <CardHeaderContent>
-                        <MudText Typo="Typo.h6">Last 20 Registred and approved profiles</MudText>
+                        <MudText Typo="Typo.h6">Most recent profiles</MudText>
                     </CardHeaderContent>
                 </MudCardHeader>
                 <MudCardContent>
