--- a/activities/Pages/ManageProfile.razor
+++ b/activities/Pages/ManageProfile.razor
@@ -225,7 +225,7 @@
             }
 
             await _profileService.UserEdit(SearchedProfile.UserId, SearchedProfile);
-            EditMessageSuccess = "Profile has beed updated successfully";
+            EditMessageSuccess = "Profile has been updated successfully";
         }
         catch(Exception ex)
         {
