--- a/activities/Pages/Profile.razor
+++ b/activities/Pages/Profile.razor
@@ -391,7 +391,7 @@
                 //add the role admin
                 await _userManager.AddToRoleAsync(user, "Admin");
             }
-            EditMessageSuccess = "User has beed updated successfully";
+            EditMessageSuccess = "User has been updated successfully";
         }
         catch
         {
